--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-  <h2> Delta Math</h2>
+     <h2> DeltaMath</h2> 
+    <ul>
+        DeltaMath Store  
+        Video Overview  
+        About the Creator  
+        Create Account  
+    </ul>
+     <p> Please Sign In</p>
+      
+     
   </body>
 </html>
