--- a/index.html
+++ b/index.html
@@ -3,18 +3,35 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-     <h2> DeltaMath</h2> 
-    <ul>
-        DeltaMath Store  
-        Video Overview  
-        About the Creator  
-        Create Account  
-    </ul>
-     <p> Please Sign In</p>
-      
-     
+      <div class="color">
+        <ul>
+          <li class="size"><a href="#create">Create Account ▼</a></li>
+          <li class="size"><a href="#video">Video Overview</a></li>
+          <li class="size"><a href="#store">DeltaMath Store</a></li>
+          <li id="logo"> DeltaMath </li>
+        </ul>
+      </div>
+       <div>
+          <img src="deltamathstudent.jpg" >
+        </div>
+      <div class="block">
+        <div>
+          <p id="space"> Please Sign In</p>
+          <p class="moon">E-mail</p>
+          <p class="moon">Password</p>
+          <p class="login">Login</p>
+        </div>
+      </div>
+      <div class="footer">
+      <p id="words">Privacy Policy Terms of Service
+
+    Copyright © 2019 DeltaMath.com. All Rights Reserved.      
+      </p>
+      </div>
   </body>
 </html>
