--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>title</title>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
       <div class="color">
@@ -16,9 +15,9 @@
           <li id="logo"> DeltaMath </li>
         </ul>
       </div>
-       <div>
-          <img src="deltamathstudent.jpg" >
-        </div>
+      <div>
+        <img class="img" src="img/students_min.jpg">
+      </div>
       <div class="block">
         <div>
           <p id="space"> Please Sign In</p>
@@ -30,7 +29,7 @@
       <div class="footer">
       <p id="words">Privacy Policy Terms of Service
 
-    Copyright © 2019 DeltaMath.com. All Rights Reserved.      
+    Copyright © 2019 DeltaMath.com. All Rights Reserved.
       </p>
       </div>
   </body>
